# wavecrux-sigrok-bridge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HOW_TO_BUILD.md  NOTICES  README.md
.claude/: settings.json
.github/workflows/: ci.yaml  isolation.yaml  release.yaml
crates/bridge/: Cargo.toml  build.rs  wrapper.h
crates/bridge/src/: ipc_loop.rs  main.rs  mock.rs  srd.rs
crates/bridge/tests/: end_to_end.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: codec.rs  lib.rs  schema.rs
crates/shim/: Cargo.toml
crates/shim/include/: wavecrux_decoder.h
crates/shim/src/: abi.rs  lib.rs  manifest.rs  registry.rs  supervisor.rs
docs/: ARCHITECTURE.md  IMPLEMENT_SRD_BACKEND.md  INSTALL.md  IPC_PROTOCOL.md  RELEASING.md  SECURITY.md
docs/adr/: 0001-language-choice.md
proto/: ipc.schema.json
test/fixtures/: README.md
test/fixtures/dmx512/: dmx_two_slots.expected_transactions.json  dmx_two_slots.vcd
test/fixtures/jtag/: jtag_idcode.expected_transactions.json  jtag_idcode.vcd
test/fixtures/modbus/: modbus_read_holding.expected_transactions.json  modbus_read_holding.vcd
test/fixtures/onewire/: onewire_basic.expected_transactions.json  onewire_basic.vcd
test/fixtures/pwm/: pwm_steps.expected_transactions.json  pwm_steps.vcd
tool/: verify_isolation.sh
tool/generate_fixtures/: Cargo.toml
tool/generate_fixtures/src/: main.rs
