[package]
name = "wavecrux-sigrok-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Subprocess companion to the WaveCrux SigRok bridge shim. Hosts libsigrokdecode and embeds Python."

[[bin]]
name = "wavecrux-sigrok-bridge"
path = "src/main.rs"

[features]
# Default builds the subprocess in mock-decoders mode, where it
# returns canned manifests for the five reference decoders and replays
# scripted annotations. This lets the entire test suite run on a
# machine without libsigrokdecode/libpython installed.
#
# The `sigrok` feature pulls in the real libsigrokdecode + Python
# embedding chain. Enabling it is the only way to get GPL-licensed
# native code into this binary. It also activates the bindgen +
# pkg-config build-time tooling (declared optional below) so the
# default build never compiles them.
default = []
sigrok = ["dep:pyo3", "dep:bindgen", "dep:pkg-config"]

[dependencies]
wavecrux-sigrok-bridge-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }

# Real libsigrokdecode hookup. Gated behind `sigrok` because pulling in
# pyo3 + a libsigrokdecode build is the part that requires a GPL-aware
# CI environment. The default feature set keeps the subprocess
# pure-Rust + permissive deps.
#
# `auto-initialize` is intentionally OFF: libsigrokdecode's `srd_init()`
# initializes the embedded CPython interpreter itself. If PyO3 were
# allowed to call `Py_Initialize` first, the subsequent `srd_init()`
# would double-initialize Python and crash. We keep the dependency so
# libpython is linked, but never drive the interpreter from PyO3.
pyo3 = { version = "0.28", features = [], optional = true }

[build-dependencies]
# These only compile when the `sigrok` feature is active (they are
# activated by `sigrok = [..., "dep:bindgen", "dep:pkg-config"]`), so
# the default mock build never pulls them in. `build.rs` additionally
# guards every use behind `#[cfg(feature = "sigrok")]`.
bindgen = { version = "0.72", optional = true }
pkg-config = { version = "0.3.33", optional = true }
