[package]
name = "wavecrux-sigrok-bridge-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared IPC types and length-prefixed JSON framing codec for the WaveCrux SigRok bridge."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
