[package]
name = "wavecrux-sigrok-bridge-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Phase 4.1 plugin: a thin C-ABI shim that spawns the WaveCrux SigRok bridge subprocess and forwards JSON-IPC."

[lib]
# Must stay distinct from the `wavecrux-sigrok-bridge` bin target: on
# Windows both would otherwise emit `wavecrux_sigrok_bridge.pdb` into
# target/*/deps, and the two parallel link.exe jobs race on that file
# (fatal LNK1201). The artifact is libwavecrux_sigrok_bridge_shim.{so,dylib}
# / wavecrux_sigrok_bridge_shim.dll; the WaveCrux loader discovers
# plugins by extension, not filename, so the rename is presentational.
name = "wavecrux_sigrok_bridge_shim"
crate-type = ["cdylib", "rlib"]

[dependencies]
wavecrux-sigrok-bridge-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

# This crate is the WaveCrux-side plugin and must NEVER take a
# dependency that pulls in libsigrokdecode, libpython, or any other
# GPL native library. The CI isolation gate enforces this with nm/ldd
# checks; do not relax that gate.
